--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-flow-renderer": "^11.6.6",
+    "reactflow": "^11.6.6",
     "react-markdown": "^8.0.7",
     "remark-gfm": "^3.0.1",
     "axios": "^1.4.0"
@@ -19,9 +19,6 @@
     "vite": "^5.0.0",
     "tailwindcss": "^3.5.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
-    "@upstash/redis": "^1.19.0"
+    "autoprefixer": "^10.4.0"
   }
 }
